10423
Reduced more:
{code}
$ cat spec.scala 
class C[@specialized T] {
  def get(t: T): T = {
    case object Hi
    t
  }
}

$ scalac spec.scala
spec.scala:3: error: Hi is already defined as (compiler-generated) case class companion object Hi
    case object Hi
                ^
one error found
{code}

And it affects miniboxing as well: https://github.com/miniboxing/miniboxing-plugin/issues/184
